# FinancialCalculation

./: .gitignore  CMakeLists.txt  README.md  generateTests.py
include/: trade_data.h  trade_processor.h
src/: main.cpp  trade_data.cpp  trade_processor.cpp
tests/: test_trade_processor.cpp
